# libboxmuller

./: CMakeLists.txt  README.dev.md  README.md
.github/workflows/: testing.yml
include/boxmuller/: boxmuller.h
src/example/: CMakeLists.txt  main.c
test/boxmuller/: CMakeLists.txt
